--- a/src/app/core/components/root/root.component.html
+++ b/src/app/core/components/root/root.component.html
@@ -1,6 +1,6 @@
 <div class="root">
     <header class="header">
-        <div class="header__name">Medieval Extreme</div>
+        <div class="header__name">E-Library</div>
         <div class="header-content">
             <div class="user-info">
                 <img alt="user-photo" src="assets/img/common/user-photo-placeholder.png" class="user-info__img">
