--- a/src/app/modules/main/pages/shell/shell.component.scss
+++ b/src/app/modules/main/pages/shell/shell.component.scss
@@ -60,3 +60,61 @@
     margin-bottom: 24px;
   }
 }
+
+
+// NEW
+
+.main{
+  display: flex;
+  width: 100vw;
+  flex-direction: column;
+  gap: 18px;
+
+  .main-row{
+    display: flex;
+    align-items: center;
+
+    & > * {
+      flex: 1;
+    }
+
+    .main-section{
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+  }
+}
+
+.new-colour-button{
+  padding: 20px;
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  margin: auto;
+  height: 180px;
+  width: 500px;
+  aspect-ratio: 1;
+  display: grid;
+}
+.loader:before,
+.loader:after {
+  content: "";
+  --c:no-repeat linear-gradient(#fff 0 0);
+  background: var(--c), var(--c);
+  background-size: 25% 50%;
+  animation: l5 1.5s infinite linear;
+}
+.loader:after {
+  transform: scale(-1);
+}
+@keyframes l5 {
+  0%,
+  5%   {background-position:33.4% 100%,66.6% 100%}
+  25%  {background-position:33.4% 100%,100% 0}
+  50%  {background-position:0 0,100% 0}
+  75%  {background-position:0 0,66.6% 100%}
+  95%,
+  100% {background-position:33.4% 100%,66.6% 100%}
+}
